# netxms

./: .gitignore  configure.ac
include/: nms_cscp.h  nms_util.h  nxqueue.h  zlib_api.h
src/agent/core/: Makefile.am  getserviceparam.cpp  getwsparam.cpp  nxagentd.h  session.cpp
src/client/java/netxms-client/src/main/java/org/netxms/client/: NXCSession.java
src/client/java/netxms-client/src/main/java/org/netxms/client/datacollection/: DciValue.java
src/client/nxapisrv/java/src/main/java/org/netxms/websvc/handlers/: GrafanaDataCollection.java
src/libnetxms/: Makefile.am  message.cpp  queue.cpp  tp.cpp  zlib.cpp  zlib_cf.cpp  zlib_std.cpp  ztools.cpp
src/server/core/: dcitem.cpp  dcowner.cpp  dctable.cpp  objects.cpp  session.cpp
src/server/include/: nms_core.h  nms_objects.h  nxsrvapi.h
src/server/libnxsrv/: agent.cpp  nxtool.cpp
src/server/tools/: Makefile.am
src/server/tools/nxaction/: nxaction.cpp
src/server/tools/nxap/: nxap.cpp
src/server/tools/nxget/: nxget.cpp
src/server/tools/nxserviceget/: .cproject  .project  Makefile.am  nxserviceget.cpp  nxwsget.cpp
src/server/tools/nxupload/: nxupload.cpp
src/server/tools/nxwsget/: nxwsget.cpp
src/zlibcf/: Makefile.am
tests/test-libnetxms/: test-libnetxms.cpp
